secrets/Ingress-with-secrets/full/pod-username.yaml
apiVersion: v1
kind: Pod
metadata:
  name: username
  labels:
    app: username
spec:
  containers:
    - name: username
      image: nginxdemos/hello:plain-text
      ports:
        - containerPort: 80
      volumeMounts:
      - name: secret
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: username
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-svc-username
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: username
