secrets/Ingress-with-secrets/full/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secret-example-ingress
spec:
  tls:
  - hosts:
    - ams.cheese.com
    secretName: secret-ssl
  rules:
  - host: ams.cheese.com
    http:
      paths:
      - path: /username
        backend:
          serviceName: nginx-secret-svc-username
          servicePort: 80
      - path: /passowrd
        backend:
          serviceName:  nginx-secret-svc-password
          servicePort: 80
      - path: /url
        backend:
          serviceName:  nginx-secret-svc-url
          servicePort: 80
